Refactor finished